--- a/index.html
+++ b/index.html
@@ -27,7 +27,10 @@
     <!-- Buttons -->
     <div class="space-x-3 mt-6">
       <a href="https://arxiv.org/pdf/2502.09274" class="px-4 py-2 bg-blue-600 text-white rounded-lg hover:bg-blue-700 transition">Paper</a>
-      <a href="https://github.com/yourusername/FLARES" class="px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">Code</a>
+      <!-- <a href="https://github.com/yourusername/FLARES" class="px-4 py-2 bg-gray-800 text-white rounded-lg hover:bg-gray-900 transition">Code</a> -->
+       <a class="px-4 py-2 bg-gray-400 text-white rounded-lg opacity-50 cursor-not-allowed">
+  Code (coming soon)
+</a>
       <a href="https://arxiv.org/abs/2502.09274" class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition">Arxiv</a>
       <!-- <a href="https://yourdatasetlink.com" class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition">Dataset</a> -->
     </div>
@@ -83,14 +86,14 @@
     <div class="text-center">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-full rounded-lg shadow-lg"
-                src="https://www.youtube.com/embed/nGlI5MmLFaU"
+                src="https://www.youtube.com/embed/mST0gG-2W1s"
                 frameborder="0"
                 referrerpolicy="strict-origin-when-cross-origin"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
 
       </div>
       <p class="mt-3 text-sm text-gray-700 font-semibold italic">
-        (a) Demo: Multi-range splitting process.
+        (a) CENet <a href="https://arxiv.org/abs/2207.12691" target="_blank" class="text-blue-600 underline">Cheng et al., 2022</a>
       </p>
     </div>
 
@@ -98,11 +101,13 @@
     <div class="text-center">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-full rounded-lg shadow-lg"
-                src="https://www.youtube.com/embed/VIDEO_ID_2"
-                frameborder="0" allowfullscreen></iframe>
+                src="https://www.youtube.com/embed/nGlI5MmLFaU"
+                frameborder="0" 
+                referrerpolicy="strict-origin-when-cross-origin"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
       </div>
       <p class="mt-3 text-sm text-gray-700 font-semibold italic">
-        (b) Demo: Range-view projection.
+        (b) FIDNet <a href="https://arxiv.org/abs/2109.03787" target="_blank" class="text-blue-600 underline">Zhao et al., 2021</a>
       </p>
     </div>
 
@@ -110,11 +115,13 @@
     <div class="text-center">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-full rounded-lg shadow-lg"
-                src="https://www.youtube.com/embed/VIDEO_ID_3"
-                frameborder="0" allowfullscreen></iframe>
+                src="https://www.youtube.com/embed/nk5Ba92MpZE"
+                frameborder="0" 
+                referrerpolicy="strict-origin-when-cross-origin"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
       </div>
       <p class="mt-3 text-sm text-gray-700 font-semibold italic">
-        (c) Demo: Network predictions across ranges.
+        (c) SalsaNext <a href="https://arxiv.org/abs/2003.03653" target="_blank" class="text-blue-600 underline">Cortinhal et al., 2020</a>
       </p>
     </div>
 
@@ -122,15 +129,15 @@
     <div class="text-center">
       <div class="aspect-w-16 aspect-h-9">
         <iframe class="w-full h-full rounded-lg shadow-lg"
-                src="https://www.youtube.com/embed/VIDEO_ID_4"
-                frameborder="0" allowfullscreen></iframe>
+                src="https://www.youtube.com/embed/tsgzeTB7sP0"
+                frameborder="0" 
+                referrerpolicy="strict-origin-when-cross-origin"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; fullscreen"></iframe>
       </div>
       <p class="mt-3 text-sm text-gray-700 font-semibold italic">
-        (d) Demo: Final fused result.
+        (d) RangeViT <a href="https://arxiv.org/abs/2301.10222" target="_blank" class="text-blue-600 underline">Ando et al., 2023</a>
       </p>
     </div>
-
-  </div>
 </section>
 
 
